--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,151 +1,137 @@
-*{
-    margin:0px;
-    padding:0px;
-    text-decoration:none;
-    list-style:none;
-    font-family: Arial, sans-serif;
+* {
+  margin: 0px;
+  padding: 0px;
+  text-decoration: none;
+  list-style: none;
+  font-family: Arial, sans-serif;
 }
 
-header{
-    width:100%;
-    background-color:rgb(240,240,240);
-    padding-top:20px;
-    padding-bottom:20px;
+header {
+  width: 100%;
+  background-color: #f0f0f0;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+header h1 {
+  padding-left: 40px;
+}
+header h1 a {
+  color: #646464;
+  transition-duration: 300ms;
+}
+header h1 a:hover {
+  transition-duration: 300ms;
+  color: #969696;
 }
 
-h1{
-    padding-left:40px;
+.moviesList {
+  background-color: #c8c8c8;
+  width: 100%;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+}
+.moviesList .movie {
+  position: relative;
+  margin: 10px;
+  width: 10%;
+  min-width: 200px;
+  padding: 10px;
+  background-color: white;
+  border-radius: 10px;
+  transition-duration: 300ms;
+}
+.moviesList .movie:hover {
+  transition-duration: 300ms;
+  box-shadow: 0px 0px 10px;
+}
+.moviesList .movie .moviePicture {
+  width: 100%;
+  border-radius: 10px;
+}
+.moviesList .movie .movieTitle {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.moviesList .movie .movieLink {
+  position: absolute;
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  left: 0;
+  top: 0;
+  overflow: hidden;
+  text-indent: -9999px;
 }
 
-h1>a{
-    color:rgb(100,100,100);
+.movieHeader {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+}
+.movieHeader .moviePageImg {
+  width: 15%;
+  min-width: 100px;
+  padding: 10px;
+  margin: 15px 0 15px 0;
+  border: 1px solid #646464;
+}
+.movieHeader .moviePageInfo {
+  padding: 10px;
+  margin: 15px 0 15px 0;
+}
+.movieHeader .moviePageInfo h2 {
+  padding: 0 10px 0 10px;
+  font-size: 24pt;
+}
+.movieHeader .moviePageInfo ul li {
+  margin-top: 5px;
+  padding-left: 10px;
 }
 
-h1>a:hover{
-    color:rgb(150,150,150);
+.movieContent {
+  margin: 10px 0 10px 0;
+}
+.movieContent h2 {
+  padding: 15px 15px 15px 30px;
+  font-size: 22pt;
+  background-color: #c8c8c8;
+  color: white;
+}
+.movieContent .characters {
+  display: flex;
+  flex-flow: row wrap;
+  margin: 10px 15px 0 15px;
+  padding: 15px;
+}
+.movieContent .characters .charImg {
+  width: 15%;
+  min-width: 240px;
+  border-radius: 15px;
+  margin: 0 10px 10px 0;
+}
+.movieContent .characters .charInfo {
+  background-color: #f0f0f0;
+  min-width: 240px;
+  padding: 20px;
+  margin-bottom: 10px;
+  border-radius: 0 20px 20px 0;
+}
+.movieContent .characters .charInfo .charDesc {
+  margin-top: 10px;
+}
+.movieContent .songs {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+}
+.movieContent .songs .song {
+  margin: 10px 15px 0 15px;
+  padding: 15px;
+}
+.movieContent .songs .song .songTitle {
+  margin-bottom: 10px;
 }
 
-.moviePicture{
-    width:100%;
-    border-radius: 10px;
-}
-
-div.moviesList{
-    background-color:rgb(200,200,200);
-    width:100%;
-    display:flex;
-    flex-flow:row wrap;
-    justify-content:space-around;
-}
-
-.movie{
-    position:relative;
-    margin:10px;
-    width:10%;
-    min-width:200px;
-    padding:10px;
-    background-color:white;
-    border-radius:10px;
-}
-
-.movie:hover{
-    box-shadow: 0px 0px 10px;
-}
-
-.movieTitle{
-    margin-top:10px;
-    margin-bottom:10px;
-}
-
-a.movieLink{
-    position: absolute;
-    display:inline-block;
-    width:100%;
-    height:100%;
-    border-radius:10px;
-    left:0;
-    top:0;
-    overflow:hidden;
-    text-indent: -9999px;
-}
-
-.movieHeader{
-    display:flex;
-    flex-flow:row wrap;
-    justify-content: center;
-}
-
-.moviePageImg{
-    width:15%;
-    min-width:100px;
-    padding:10px;
-    margin:15px 0 15px 0;
-    border: 1px solid rgb(100,100,100);
-}
-
-.moviePageInfo{
-    padding:10px;
-    margin:15px 0 15px 0;
-}
-
-.moviePageInfo h2{
-    padding:0 10px 0 10px;
-    font-size:24pt;
-}
-
-.moviePageInfo ul li{
-    margin-top:5px;
-    padding-left:10px;
-}
-
-.movieContent{
-    margin:10px 0 10px 0;
-}
-
-.movieContent h2{
-    padding:15px 15px 15px 30px;
-    font-size:22pt;
-    background-color: rgb(200,200,200);
-    color:white;
-}
-
-.character{
-    display:flex;
-    flex-flow:row wrap;
-    margin:10px 15px 0 15px;
-    padding:15px;
-}
-
-.charImg{
-    width:15%;
-    min-width:240px;
-    border-radius:15px;
-    margin:0 10px 10px 0;
-}
-
-.charInfo{
-    background-color: rgb(230,230,230);
-    min-width:240px;
-    padding:20px;
-    margin-bottom:10px;
-    border-radius:0 20px 20px 0;
-}
-
-.charDesc{
-    margin-top:10px;
-}
-
-.songsList{
-    display:flex;
-    flex-flow:row wrap;
-    justify-content: space-around;
-}
-
-.song{
-    margin:10px 15px 0 15px;
-    padding:15px;
-}
-
-.songTitle{
-    margin-bottom:10px;
-}
+/*# sourceMappingURL=style.css.map */
