--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,34 +4,99 @@
   text-decoration: none;
   list-style: none;
   font-family: Arial, sans-serif;
+  color: #646464;
 }
 
 header {
-  width: 100%;
   background-color: #f0f0f0;
-  padding-top: 20px;
-  padding-bottom: 20px;
-}
-header h1 {
-  padding-left: 40px;
-}
-header h1 a {
-  color: #646464;
-  transition-duration: 300ms;
-}
-header h1 a:hover {
-  transition-duration: 300ms;
-  color: #969696;
+  padding: 20px 40px 20px 40px;
+  display: flex;
 }
 
-.moviesList {
+nav {
+  display: flex;
+  flex-flow: row wrap;
+}
+nav a {
+  color: white;
+  transition-duration: 300ms;
+  background-color: #aaaaaa;
+  border-radius: 3px;
+  padding: 10px;
+}
+nav a:hover {
+  transition-duration: 300ms;
+  background-color: #64c8ff;
+}
+
+@media screen and (max-width: 370px) {
+  nav {
+    flex-flow: column nowrap;
+    margin-top: 20px;
+  }
+  nav a {
+    margin-bottom: 10px;
+    text-align: center;
+  }
+}
+@media screen and (max-width: 640px) {
+  header {
+    flex-flow: column wrap;
+    align-items: center;
+  }
+
+  h1 {
+    width: 100%;
+    text-align: center;
+  }
+}
+@media screen and (min-width: 371px) and (max-width: 640px) {
+  nav {
+    justify-content: center;
+    margin-top: 20px;
+  }
+  nav a {
+    margin: 0 5px 10px 5px;
+  }
+}
+@media screen and (min-width: 641px) {
+  header {
+    flex-flow: row wrap;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  h1 {
+    margin: 0 40px 0 40px;
+  }
+
+  nav a {
+    margin: 0 5px 0 5px;
+  }
+}
+.pageHeader {
+  display: flex;
+  flex-flow: column wrap;
+  align-items: center;
+  padding-top: 20px;
+}
+.pageHeader h2 {
+  padding-bottom: 20px;
+  font-size: 24pt;
+}
+.pageHeader .sortBy {
+  padding-bottom: 20px;
+}
+
+.mainContent {
   background-color: #c8c8c8;
   width: 100%;
   display: flex;
   flex-flow: row wrap;
   justify-content: space-around;
+  padding-top: 15px;
 }
-.moviesList .movie {
+.mainContent .movie {
   position: relative;
   margin: 10px;
   width: 10%;
@@ -41,19 +106,19 @@ header h1 a:hover {
   border-radius: 10px;
   transition-duration: 300ms;
 }
-.moviesList .movie:hover {
+.mainContent .movie:hover {
   transition-duration: 300ms;
   box-shadow: 0px 0px 10px;
 }
-.moviesList .movie .moviePicture {
+.mainContent .movie .moviePicture {
   width: 100%;
   border-radius: 10px;
 }
-.moviesList .movie .movieTitle {
+.mainContent .movie .movieTitle {
   margin-top: 10px;
   margin-bottom: 10px;
 }
-.moviesList .movie .movieLink {
+.mainContent .movie .movieLink {
   position: absolute;
   display: inline-block;
   width: 100%;
@@ -65,73 +130,122 @@ header h1 a:hover {
   text-indent: -9999px;
 }
 
+.listElement {
+  margin: 10px 15px 15px 15px;
+  padding: 15px;
+  text-align: center;
+  border-radius: 10px;
+}
+.listElement .elementMovie {
+  text-align: left;
+  color: #aaaaaa;
+  font-size: 12pt;
+}
+.listElement .elementTitle {
+  color: #646464;
+  font-size: 16pt;
+  margin-bottom: 10px;
+}
+.listElement .elementImg {
+  border-radius: 10px;
+  width: 180px;
+}
+.listElement .elementImg:hover {
+  cursor: pointer;
+}
+.listElement:hover {
+  background-color: #f0f0f0;
+}
+
 .movieHeader {
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
+  align-items: flex-start;
 }
 .movieHeader .moviePageImg {
   width: 15%;
-  min-width: 100px;
+  min-width: 150px;
   padding: 10px;
   margin: 15px 0 15px 0;
   border: 1px solid #646464;
 }
 .movieHeader .moviePageInfo {
   padding: 10px;
-  margin: 15px 0 15px 0;
+  margin: 0 0 15px 15px;
 }
 .movieHeader .moviePageInfo h2 {
   padding: 0 10px 0 10px;
   font-size: 24pt;
 }
-.movieHeader .moviePageInfo ul li {
+.movieHeader .moviePageInfo .movieDetails {
+  background-color: #aaaaaa;
+  padding: 10px 20px 20px 20px;
+  margin-top: 10px;
+  border-radius: 10px;
+}
+.movieHeader .moviePageInfo .movieDetails ul li {
   margin-top: 5px;
   padding-left: 10px;
+  color: white;
+}
+.movieHeader .moviePageInfo .movieDetails ul li a {
+  color: white;
+}
+.movieHeader .moviePageInfo .movieDetails ul li a:hover {
+  color: #646464;
+}
+.movieHeader .moviePageInfo .movieDetails h3 {
+  margin: 15px 0 15px 0;
+  color: white;
 }
 
 .movieContent {
-  margin: 10px 0 10px 0;
+  background-color: #c8c8c8;
 }
 .movieContent h2 {
   padding: 15px 15px 15px 30px;
   font-size: 22pt;
-  background-color: #c8c8c8;
+  background-color: #aaaaaa;
   color: white;
 }
-.movieContent .characters {
-  display: flex;
-  flex-flow: row wrap;
-  margin: 10px 15px 0 15px;
-  padding: 15px;
-}
-.movieContent .characters .charImg {
-  width: 15%;
-  min-width: 240px;
-  border-radius: 15px;
-  margin: 0 10px 10px 0;
-}
-.movieContent .characters .charInfo {
-  background-color: #f0f0f0;
-  min-width: 240px;
-  padding: 20px;
-  margin-bottom: 10px;
-  border-radius: 0 20px 20px 0;
-}
-.movieContent .characters .charInfo .charDesc {
-  margin-top: 10px;
-}
-.movieContent .songs {
+.movieContent .movieSection {
   display: flex;
   flex-flow: row wrap;
   justify-content: space-around;
 }
-.movieContent .songs .song {
-  margin: 10px 15px 0 15px;
-  padding: 15px;
+
+#videoPlayer {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.9);
+  top: 0;
+  text-align: center;
 }
-.movieContent .songs .song .songTitle {
-  margin-bottom: 10px;
+#videoPlayer img {
+  z-index: 9999;
+  position: fixed;
+  width: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media screen and (orientation: landscape) {
+  #videoPlayed {
+    height: 100%;
+    width: 177.7777777778vh;
+  }
+}
+@media screen and (orientation: portrait) {
+  #videoPlayed {
+    width: 100%;
+    height: 56.25vw;
+  }
+}
+.hidden {
+  display: none;
+  z-index: -9999;
 }
 
 /*# sourceMappingURL=style.css.map */
