--- a/public/css/style.css
+++ b/public/css/style.css
@@ -98,14 +98,14 @@ h1 a:hover {
   padding-bottom: 20px;
 }
 
-.mainContent {
+#mainContent {
   background-color: #c8c8c8;
   display: flex;
   flex-flow: row wrap;
   justify-content: space-around;
   padding-top: 15px;
 }
-.mainContent .movie {
+#mainContent .movie {
   position: relative;
   margin: 10px;
   width: 10%;
@@ -115,19 +115,19 @@ h1 a:hover {
   border-radius: 10px;
   transition-duration: 300ms;
 }
-.mainContent .movie:hover {
+#mainContent .movie:hover {
   transition-duration: 300ms;
   box-shadow: 0px 0px 10px;
 }
-.mainContent .movie .moviePicture {
+#mainContent .movie .moviePicture {
   width: 100%;
   border-radius: 10px;
 }
-.mainContent .movie .movieTitle {
+#mainContent .movie .movieTitle {
   margin-top: 10px;
   margin-bottom: 10px;
 }
-.mainContent .movie .movieLink {
+#mainContent .movie .movieLink {
   position: absolute;
   display: inline-block;
   width: 100%;
