--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -72,7 +72,7 @@ h1{
     }
 }
 
-@media screen and (max-width: 640px) {//Tous smartphones et petites tablettes
+@media screen and (max-width: 655px) {//Tous smartphones et petites tablettes
     header{
         flex-flow:column wrap;
         align-items:center;
@@ -82,9 +82,27 @@ h1{
         width:100%;
         text-align:center;
     }
+
+    #charInfo{
+        width:80%;
+        order:1;
+
+        #charImg{
+            width:100%;
+        }
+    }
+
+    #moviePageInfo{
+        width: 85%;
+        margin-bottom: 15px;
+    }
+
+    .infoOpened{
+        order:2;
+    }
 }
 
-@media screen and (min-width:371px) and (max-width: 640px) {//Smartphones larges et petites tablettes
+@media screen and (min-width:371px) and (max-width: 655px) {//Smartphones larges et petites tablettes
     nav{
         justify-content:center;
         margin-top:20px;
@@ -95,7 +113,7 @@ h1{
     }
 }
 
-@media screen and (min-width: 641px) {//Grandes tablettes ou PC
+@media screen and (min-width: 656px) {//Grandes tablettes ou PC
     header{
         flex-flow:row wrap;
         justify-content:space-between;
@@ -110,6 +128,11 @@ h1{
         a{
             margin:0 5px 0 5px;
         }
+    }
+
+    #moviePageInfo{
+        max-width:50%;
+        margin:0 0 15px 15px;
     }
 }
 
@@ -175,17 +198,13 @@ h1{
     }
 }
 
-.charactersList{
+#charactersList{
     background-color:$medLightColor;
     display:flex;
     flex-flow:row wrap;
     justify-content:space-evenly;
     padding-top:15px;
     width:100%;
-}
-
-.infoOpened{
-    width:50%;
 }
 
 .listElement{
@@ -220,13 +239,13 @@ h1{
     }
 }
 
-.movieHeader{
+#movieHeader{
     display:flex;
     flex-flow:row wrap;
     justify-content: center;
     align-items: flex-start;
 
-    .moviePageImg{
+    >img{
         width:15%;
         min-width:150px;
         padding:10px;
@@ -234,33 +253,43 @@ h1{
         border: 1px solid rgb(100,100,100);
     }
     
-    .moviePageInfo{
+    #moviePageInfo{
         padding:10px;
-        margin:0 0 15px 15px;
 
         h2{
             padding:0 10px 0 10px;
             font-size:24pt;
         }
 
-        .movieDetails{
+        #movieDetails{
             background-color:$mediumColor;
             padding:10px 20px 20px 20px;
             margin-top:10px;
             border-radius:10px;
 
-            ul{
-                li{
-                    margin-top:5px;
-                    padding-left:10px;
-                    color:white;
-                    
-                    a{
-                        color:white;
+            p{
+                margin-top:5px;
+                padding-left:10px;
+                color:white;
 
-                        &:hover{
-                            color:$darkColor;
-                        }
+                span{
+                    color:white;
+                    text-decoration: underline;
+                    display:inline-block;
+                    margin-bottom:5px;
+                }
+            }
+
+            li{
+                margin-top:5px;
+                padding-left:10px;
+                color:white;
+                
+                a{
+                    color:white;
+
+                    &:hover{
+                        color:$darkColor;
                     }
                 }
             }
@@ -271,6 +300,10 @@ h1{
             }
         }
     }
+}
+
+#movieStory{
+    text-align:justify;
 }
 
 .movieContent{
@@ -288,6 +321,12 @@ h1{
         flex-flow:row wrap;
         justify-content:space-evenly;
     }
+}
+
+#musicList{
+    display:flex;
+    flex-flow:row wrap;
+    justify-content:space-around;
 }
 
 #charInfo{
@@ -317,7 +356,7 @@ h1{
         border-radius:10px;
     }
 
-    h3, h4, p{
+    h3, p{
         text-align:left;
         color:white;
     }
@@ -327,26 +366,20 @@ h1{
         margin:10px 0 10px 0;
     }
 
-    h4{
+    #charMovie{
         font-size:120%;
         margin-bottom:10px;
     }
-}
 
-@media screen and (max-width:670px){
-    #charInfo{
-        width:80%;
-        order:1;
+    a{
+        color:white;
 
-        #charImg{
-            width:100%;
+        &:hover{
+            text-decoration:underline;
         }
     }
-
-    .infoOpened{
-        order:2;
-    }
 }
+
 
 #videoPlayer{
     position:fixed;
