Système de filtre

--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -150,6 +150,10 @@ h1{
     .sortBy{
         padding-bottom:20px;
     }
+
+    .filterBy{
+        margin-bottom:20px;
+    }
 }
 
 #mainContent{
