--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -4,12 +4,12 @@ $medLightColor:rgb(200,200,200);
 $lightColor:rgb(240,240,240);
 $testColor:rgba(255,0,0,0.5);
 
-@function fitHeight(){
+@function adaptHeight(){
     $newHeight: (100vw/16)*9;
     @return $newHeight;
 }
 
-@function fitWidth(){
+@function adaptWidth(){
     $newWidth: (100vh/9)*16;
     @return $newWidth;
 }
@@ -60,6 +60,265 @@ h1{
     }
 }
 
+#pageHeader{
+    display:flex;
+    flex-flow:column wrap;
+    align-items:center;
+    padding-top:20px;
+
+    h2{
+        padding-bottom: 20px;
+        font-size:24pt;
+    }
+}
+
+.moviesListOptions{
+    margin-bottom:20px;
+}
+
+#moviesList{
+    background-color:$medLightColor;
+    display:flex;
+    flex-flow:row wrap;
+    justify-content:space-around;
+    padding-top:15px;
+}
+
+.movie{
+    position:relative;
+    margin:10px;
+    width:10%;
+    min-width:200px;
+    padding:10px;
+    background-color:white;
+    border-radius:10px;
+    transition-duration: 300ms;
+
+    &:hover{
+        transition-duration: 300ms;
+        box-shadow: 0px 0px 10px;
+    }
+
+    img{
+        width:100%;
+        border-radius: 10px;
+    }
+    
+    h3{
+        margin-top:10px;
+        margin-bottom:10px;
+    }
+    
+    a{
+        position: absolute;
+        display:inline-block;
+        width:100%;
+        height:100%;
+        border-radius:10px;
+        left:0;
+        top:0;
+        overflow:hidden;
+        text-indent: -9999px;
+    }
+}
+
+.movieSectionTitle{
+    padding:15px 15px 15px 30px;
+    font-size:22pt;
+    background-color: $mediumColor;
+    color:white;
+}
+
+.listElement{
+    margin:10px 15px 15px 15px;
+    padding:15px;
+    text-align: center;
+    border-radius:10px;
+
+    &:hover{
+        background-color: $lightColor;
+    }
+
+    h3{
+        color:$darkColor;
+        font-size:16pt;
+        margin-bottom:10px;
+
+        span{
+            text-align: left;
+            color:$mediumColor;
+            font-size:12pt;
+        }
+    }
+
+    img{
+        border-radius:10px;
+        width:180px;
+
+        &:hover{
+            cursor:pointer;
+        }
+    }
+}
+
+#movieHeader{
+    display:flex;
+    flex-flow:row wrap;
+    justify-content: center;
+    align-items: flex-start;
+
+    img{
+        width:15%;
+        min-width:150px;
+        padding:10px;
+        margin:15px 0 15px 0;
+        border: 1px solid rgb(100,100,100);
+    }
+}
+
+#moviePageInfo{
+    padding:10px;
+
+    h2{
+        padding:0 10px 0 10px;
+        font-size:24pt;
+    }
+}
+
+#movieDetails{
+    background-color:$mediumColor;
+    padding:10px 20px 20px 20px;
+    margin-top:10px;
+    border-radius:10px;
+
+    p{
+        margin-top:5px;
+        padding-left:10px;
+        color:white;
+
+        span{
+            color:white;
+            text-decoration: underline;
+            display:inline-block;
+            margin-bottom:5px;
+        }
+    }
+
+    li{
+        margin-top:5px;
+        padding-left:10px;
+        color:white;
+        
+        a{
+            color:white;
+
+            &:hover{
+                color:$darkColor;
+            }
+        }
+    }
+
+    h3{
+        margin:15px 0 15px 0;
+        color:white;
+    }
+}
+
+#movieStory{
+    text-align:justify;
+}
+
+#charactersDisplay{
+    background-color:$medLightColor;
+    display:flex;
+    flex-flow:row wrap;
+    justify-content:space-around;
+    padding-top:15px;
+}
+
+#charactersList{
+    display:flex;
+    flex-flow:row wrap;
+    justify-content:space-evenly;
+    width:100%;
+}
+
+#charInfo{
+    background-color: $darkColor;
+    width:40%;
+    padding:20px;
+    margin-bottom:20px;
+    border-radius:3px;
+    text-align:center;
+    position:relative;
+
+    *{
+        color:white;
+    }
+    
+    h3, p{
+        text-align:left;
+    }
+
+    h3{
+        font-size:150%;
+        margin:10px 0 10px 0;
+    }
+
+    a{
+        &:hover{
+            text-decoration:underline;
+        }
+    }
+}
+
+#charInfoImg{
+    width:270px;
+    margin-left:auto;
+    margin-right:auto;
+    border-radius:10px;
+}
+
+#closeInfo{
+    position:absolute;
+    top:20px;
+    right:20px;
+
+    &:hover{
+        cursor:pointer;
+        filter: brightness(200%);
+    }
+}
+
+#charMovie{
+    font-size:120%;
+    margin-bottom:10px;
+}
+
+#musicList{
+    background-color:$medLightColor;
+    display:flex;
+    flex-flow:row wrap;
+    justify-content:space-around;
+}
+
+#videoPlayer{
+    position:fixed;
+    width:100%;
+    height:100%;
+    background-color:rgba(0,0,0,0.9);
+    top:0;
+    text-align:center;
+
+    img{
+        z-index:9999;
+        position:fixed;
+        width:20px;
+        margin-left:auto;
+        margin-right:auto;
+    }
+}
+
 @media screen and (max-width: 370px) {//Petits smartphones
     nav{
         flex-flow:column nowrap;
@@ -87,7 +346,7 @@ h1{
         width:80%;
         order:1;
 
-        #charImg{
+        img{
             width:100%;
         }
     }
@@ -136,283 +395,17 @@ h1{
     }
 }
 
-.pageHeader{
-    display:flex;
-    flex-flow:column wrap;
-    align-items:center;
-    padding-top:20px;
-
-    h2{
-        padding-bottom: 20px;
-        font-size:24pt;
-    }
-
-    .sortBy{
-        padding-bottom:20px;
-    }
-
-    .filterBy{
-        margin-bottom:20px;
-    }
-}
-
-#mainContent{
-    background-color:$medLightColor;
-    display:flex;
-    flex-flow:row wrap;
-    justify-content:space-around;
-    padding-top:15px;
-
-    .movie{
-        position:relative;
-        margin:10px;
-        width:10%;
-        min-width:200px;
-        padding:10px;
-        background-color:white;
-        border-radius:10px;
-        transition-duration: 300ms;
-
-        &:hover{
-            transition-duration: 300ms;
-            box-shadow: 0px 0px 10px;
-        }
-
-        .moviePicture{
-            width:100%;
-            border-radius: 10px;
-        }
-        
-        .movieTitle{
-            margin-top:10px;
-            margin-bottom:10px;
-        }
-        
-        .movieLink{
-            position: absolute;
-            display:inline-block;
-            width:100%;
-            height:100%;
-            border-radius:10px;
-            left:0;
-            top:0;
-            overflow:hidden;
-            text-indent: -9999px;
-        }
-    }
-}
-
-#charactersList{
-    background-color:$medLightColor;
-    display:flex;
-    flex-flow:row wrap;
-    justify-content:space-evenly;
-    padding-top:15px;
-    width:100%;
-}
-
-.listElement{
-    margin:10px 15px 15px 15px;
-    padding:15px;
-    text-align: center;
-    border-radius:10px;
-
-    .elementMovie{
-        text-align: left;
-        color:$mediumColor;
-        font-size:12pt;
-    }
-
-    .elementTitle{
-        color:$darkColor;
-        font-size:16pt;
-        margin-bottom:10px;
-    }
-
-    .elementImg{
-        border-radius:10px;
-        width:180px;
-
-        &:hover{
-            cursor:pointer;
-        }
-    }
-
-    &:hover{
-        background-color: $lightColor;
-    }
-}
-
-#movieHeader{
-    display:flex;
-    flex-flow:row wrap;
-    justify-content: center;
-    align-items: flex-start;
-
-    >img{
-        width:15%;
-        min-width:150px;
-        padding:10px;
-        margin:15px 0 15px 0;
-        border: 1px solid rgb(100,100,100);
-    }
-    
-    #moviePageInfo{
-        padding:10px;
-
-        h2{
-            padding:0 10px 0 10px;
-            font-size:24pt;
-        }
-
-        #movieDetails{
-            background-color:$mediumColor;
-            padding:10px 20px 20px 20px;
-            margin-top:10px;
-            border-radius:10px;
-
-            p{
-                margin-top:5px;
-                padding-left:10px;
-                color:white;
-
-                span{
-                    color:white;
-                    text-decoration: underline;
-                    display:inline-block;
-                    margin-bottom:5px;
-                }
-            }
-
-            li{
-                margin-top:5px;
-                padding-left:10px;
-                color:white;
-                
-                a{
-                    color:white;
-
-                    &:hover{
-                        color:$darkColor;
-                    }
-                }
-            }
-
-            h3{
-                margin:15px 0 15px 0;
-                color:white;
-            }
-        }
-    }
-}
-
-#movieStory{
-    text-align:justify;
-}
-
-.movieContent{
-    background-color:$medLightColor;
-
-    h2{
-        padding:15px 15px 15px 30px;
-        font-size:22pt;
-        background-color: $mediumColor;
-        color:white;
-    }
-
-    .movieSection{
-        display:flex;
-        flex-flow:row wrap;
-        justify-content:space-evenly;
-    }
-}
-
-#musicList{
-    display:flex;
-    flex-flow:row wrap;
-    justify-content:space-around;
-}
-
-#charInfo{
-    background-color: $darkColor;
-    width:40%;
-    padding:20px;
-    margin-bottom:20px;
-    border-radius:3px;
-    text-align:center;
-    position:relative;
-
-    #closeInfo{
-        position:absolute;
-        top:20px;
-        right:20px;
-
-        &:hover{
-            cursor:pointer;
-            filter: brightness(200%);
-        }
-    }
-
-    #charImg{
-        width:270px;
-        margin-left:auto;
-        margin-right:auto;
-        border-radius:10px;
-    }
-
-    h3, p{
-        text-align:left;
-        color:white;
-    }
-
-    h3{
-        font-size:150%;
-        margin:10px 0 10px 0;
-    }
-
-    #charMovie{
-        font-size:120%;
-        margin-bottom:10px;
-    }
-
-    a{
-        color:white;
-
-        &:hover{
-            text-decoration:underline;
-        }
-    }
-}
-
-
-#videoPlayer{
-    position:fixed;
-    width:100%;
-    height:100%;
-    background-color:rgba(0,0,0,0.9);
-    top:0;
-    text-align:center;
-
-    img{
-        z-index:9999;
-        position:fixed;
-        width:20px;
-        margin-left:auto;
-        margin-right:auto;
-    }
-}
-
-@media screen and (orientation: landscape){
+@media screen and (min-aspect-ratio: 16/9){
     #videoPlayed{
         height:100%;
-        width:fitWidth();
+        width:adaptWidth();
     }
 }
 
-@media screen and (orientation: portrait){
+@media screen and (max-aspect-ratio: 16/9){
     #videoPlayed{
         width:100%;
-        height:fitHeight();
+        height:adaptHeight();
     }
 }
 
