--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -39,13 +39,36 @@ nav{
         transition-duration: 300ms;
         background-color:$mediumColor;
         border-radius: 3px;
-        padding:10px;
+        padding:13px 20px 13px 50px;
+        position:relative;
 
         &:hover{
             transition-duration: 300ms;
             background-color:rgb(100,200,255);
         }
+
+        &::before{
+            display:inline-block;
+            height:5px;
+            margin-right:10px;
+            filter:brightness(200%);
+            position:absolute;
+            top:6px;
+            left:10px
+        }
     }
+}
+
+#navMovie::before{
+    content:url("../../img/movieIcon.png");
+}
+
+#navMusic::before{
+    content:url("../../img/musicIcon.png");
+}
+
+#navChar::before{
+    content:url("../../img/characterIcon.png");
 }
 
 h1{
@@ -65,6 +88,7 @@ h1{
     flex-flow:column wrap;
     align-items:center;
     padding-top:20px;
+    background-color: white;
 
     h2{
         padding-bottom: 20px;
@@ -134,6 +158,7 @@ h1{
     padding:15px;
     text-align: center;
     border-radius:10px;
+    width: 185px;
 
     &:hover{
         background-color: $lightColor;
@@ -166,6 +191,7 @@ h1{
     flex-flow:row wrap;
     justify-content: center;
     align-items: flex-start;
+    background-color: white;
 
     img{
         width:15%;
@@ -308,14 +334,68 @@ h1{
     height:100%;
     background-color:rgba(0,0,0,0.9);
     top:0;
-    text-align:center;
+    display:flex;
+    justify-content:center;
+}
+
+#videoNavBar{
+    z-index:9999;
+    background-color:rgba(255,255,255,0);
+    border-radius:30px;
+    padding:10px;
+    top:30px;
+    width:160px;
+    display:flex;
+    flex-flow:row nowrap;
+    justify-content: space-around;
+    align-items:center;
+    transition-duration: 300ms;
+    
+    &:hover{
+        transition-duration: 300ms;
+        background-color:rgba(255,255,255,0.2);
+    }
 
     img{
-        z-index:9999;
-        position:fixed;
-        width:20px;
-        margin-left:auto;
-        margin-right:auto;
+        height:30px;
+        padding:5px;
+        display:block;
+        filter: brightness(200%);
+        opacity:0.3;
+
+        &:hover{
+            cursor:pointer;
+            //filter: brightness(200%);
+            opacity:1;
+        }
+    }
+}
+
+@media screen and (orientation:landscape){
+    #videoPlayer{
+        flex-flow:row nowrap;
+    }
+    
+    #videoNavBar{
+        position:absolute;
+        top:30px;
+    }
+}
+
+@media screen and (orientation:portrait){
+    #videoPlayer{
+        flex-flow:column nowrap;
+        align-items: center;
+    }
+
+    #videoNavBar{
+        position:relative;
+        width:80%;
+        order:1;
+
+        img{
+            filter: brightness(100%);
+        }
     }
 }
 
@@ -411,5 +491,6 @@ h1{
 
 .hidden{
     display:none;
+    visibility:hidden;
     z-index:-9999;
 }
