--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,7 +10,7 @@
 
 header {
   background-color: #f0f0f0;
-  padding: 20px 40px 20px 40px;
+  padding: 20px 40px 20px 20px;
   display: flex;
 }
 
@@ -28,6 +28,9 @@ nav a {
 }
 nav a:hover {
   transition-duration: 300ms;
+}
+
+#navMovie:hover {
   background-color: #64c8ff;
 }
 nav a::before {
@@ -52,13 +55,57 @@ nav a::before {
   content: url("../../img/characterIcon.png");
 }
 
+#navMusic:hover {
+  background-color: #ff6414;
+}
+
+#navChar:hover {
+  background-color: #45c971;
+}
+
+#navMovie::before {
+  content: url("../../img/movieIcon.png");
+}
+
+#navMusic::before {
+  content: url("../../img/musicIcon.png");
+}
+
+#navChar::before {
+  content: url("../../img/characterIcon.png");
+}
+
+#titleLetterA {
+  color: #64c8ff;
+}
+
+#titleLetterB {
+  color: #ff6414;
+}
+
+#titleLetterC {
+  color: #45c971;
+}
+
+#titleLetterD {
+  color: #e7c425;
+}
+
 h1 a {
   transition-duration: 300ms;
   font-size: 200%;
+  display: block;
 }
 h1 a:hover {
   transition-duration: 300ms;
-  color: #c8c8c8;
+  color: white;
+}
+h1 a:hover #titleLetterA, h1 a:hover #titleLetterB, h1 a:hover #titleLetterC, h1 a:hover #titleLetterD {
+  transition-duration: 250ms;
+  color: white;
+}
+h1 a span {
+  font-size: 160%;
 }
 
 #pageHeader {
@@ -263,6 +310,8 @@ h1 a:hover {
   position: absolute;
   top: 20px;
   right: 20px;
+  display: block;
+  width: 25px;
 }
 #closeInfo:hover {
   cursor: pointer;
@@ -355,7 +404,7 @@ h1 a:hover {
     text-align: center;
   }
 }
-@media screen and (max-width: 655px) {
+@media screen and (max-width: 810px) {
   header {
     flex-flow: column wrap;
     align-items: center;
@@ -370,7 +419,8 @@ h1 a:hover {
     width: 80%;
     order: 1;
   }
-  #charInfo img {
+
+  #charInfoImg {
     width: 100%;
   }
 
@@ -383,7 +433,7 @@ h1 a:hover {
     order: 2;
   }
 }
-@media screen and (min-width: 371px) and (max-width: 655px) {
+@media screen and (min-width: 371px) and (max-width: 810px) {
   nav {
     justify-content: center;
     margin-top: 20px;
@@ -393,6 +443,12 @@ h1 a:hover {
   }
 }
 @media screen and (min-width: 656px) {
+  #moviePageInfo {
+    max-width: 50%;
+    margin: 0 0 15px 15px;
+  }
+}
+@media screen and (min-width: 811px) {
   header {
     flex-flow: row wrap;
     justify-content: space-between;
@@ -405,11 +461,6 @@ h1 a:hover {
 
   nav a {
     margin: 0 5px 0 5px;
-  }
-
-  #moviePageInfo {
-    max-width: 50%;
-    margin: 0 0 15px 15px;
   }
 }
 @media screen and (min-aspect-ratio: 16/9) {
