--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -74,6 +74,10 @@ nav{
     background-color:$greenKids;
 }
 
+#navGame:hover{
+    background-color: $yellowKids;
+}
+
 #navMovie::before{
     content:url("../../img/movieIcon.png");
 }
@@ -84,6 +88,10 @@ nav{
 
 #navChar::before{
     content:url("../../img/characterIcon.png");
+}
+
+#navGame::before{
+    content:url("../../img/gamesIcon.png");
 }
 
 #titleLetterA{
@@ -166,6 +174,9 @@ h1{
 
     img{
         width:100%;
+        content-visibility: auto;
+        max-width: 100%;
+        height: auto;
         border-radius: 10px;
     }
     
@@ -538,4 +549,40 @@ h1{
     display:none;
     visibility:hidden;
     z-index:-9999;
+}
+
+.errorMsg{
+    color: red;
+    font-weight:700;
+    margin:10px 0 25px;
+}
+
+.section{
+    width:100%;
+    display:flex;
+    justify-content: center;
+    background-color: $darkColor;
+}
+
+.section-container{
+    width:80%;
+    text-align:center;
+}
+
+.kidsMoviesBtn{
+    padding:10px;
+    margin:20px;
+    background-color: $medLightColor;
+    color:white;
+    border-radius: 4px;
+    border:none;
+
+    &:hover{
+        cursor:pointer;
+        background-color: $yellowKids;
+    }
+}
+
+#videoPlayerContainer>iframe{
+    margin-bottom:20px;
 }
