--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -4,9 +4,9 @@ $medLightColor:rgb(200,200,200);
 $lightColor:rgb(240,240,240);
 $testColor:rgba(255,0,0,0.5);
 $blueKids:rgb(100,200,255);
-$redKids:rgb(255,100,20);
+$redKids:rgb(255, 62, 14);
 $greenKids:rgb(69, 201, 113);
-$yellowKids:rgb(231, 196, 37);
+$yellowKids:rgb(255, 223, 40);
 
 @function adaptHeight(){
     $newHeight: (100vw/16)*9;
@@ -34,66 +34,6 @@ header{
     display:flex;
 }
 
-nav{
-    display:flex;
-    flex-flow:row wrap;
-    
-    a{
-        color:white;
-        transition-duration: 300ms;
-        background-color:$mediumColor;
-        border-radius: 3px;
-        padding:13px 20px 13px 50px;
-        position:relative;
-
-        &:hover{
-            transition-duration: 300ms;
-        }
-
-        &::before{
-            display:inline-block;
-            height:5px;
-            margin-right:10px;
-            filter:brightness(200%);
-            position:absolute;
-            top:6px;
-            left:10px
-        }
-    }
-}
-
-#navMovie:hover{
-    background-color:$blueKids;
-}
-
-#navMusic:hover{
-    background-color:$redKids;
-}
-
-#navChar:hover{
-    background-color:$greenKids;
-}
-
-#navGame:hover{
-    background-color: $yellowKids;
-}
-
-#navMovie::before{
-    content:url("../../img/movieIcon.png");
-}
-
-#navMusic::before{
-    content:url("../../img/musicIcon.png");
-}
-
-#navChar::before{
-    content:url("../../img/characterIcon.png");
-}
-
-#navGame::before{
-    content:url("../../img/gamesIcon.png");
-}
-
 #titleLetterA{
     color:$blueKids;
 }
@@ -110,7 +50,7 @@ nav{
     color:$yellowKids;
 }
 
-h1{
+.mainTitle{
     a{
         transition-duration: 300ms;
         font-size:200%;
@@ -132,7 +72,7 @@ h1{
     }
 }
 
-#pageHeader{
+/*#pageHeader{
     display:flex;
     flex-flow:column wrap;
     align-items:center;
@@ -143,7 +83,7 @@ h1{
         padding-bottom: 20px;
         font-size:24pt;
     }
-}
+}*/
 
 .moviesListOptions{
     margin-bottom:20px;
@@ -187,6 +127,7 @@ h1{
     
     a{
         position: absolute;
+        z-index:1000;
         display:inline-block;
         width:100%;
         height:100%;
@@ -196,13 +137,6 @@ h1{
         overflow:hidden;
         text-indent: -9999px;
     }
-}
-
-.movieSectionTitle{
-    padding:15px 15px 15px 30px;
-    font-size:22pt;
-    background-color: $mediumColor;
-    color:white;
 }
 
 .listElement{
@@ -238,81 +172,13 @@ h1{
     }
 }
 
-#movieHeader{
-    display:flex;
-    flex-flow:row wrap;
-    justify-content: center;
-    align-items: flex-start;
-    background-color: white;
-
-    img{
-        width:15%;
-        min-width:150px;
-        padding:10px;
-        margin:15px 0 15px 0;
-        border: 1px solid rgb(100,100,100);
-    }
-}
-
-#moviePageInfo{
-    padding:10px;
-
-    h2{
-        padding:0 10px 0 10px;
-        font-size:24pt;
-    }
-}
-
-#movieDetails{
-    background-color:$mediumColor;
-    padding:10px 20px 20px 20px;
-    margin-top:10px;
-    border-radius:10px;
-
-    p{
-        margin-top:5px;
-        padding-left:10px;
-        color:white;
-
-        span{
-            color:white;
-            text-decoration: underline;
-            display:inline-block;
-            margin-bottom:5px;
-        }
-    }
-
-    li{
-        margin-top:5px;
-        padding-left:10px;
-        color:white;
-        
-        a{
-            color:white;
-
-            &:hover{
-                color:$darkColor;
-            }
-        }
-    }
-
-    h3{
-        margin:15px 0 15px 0;
-        color:white;
-    }
-}
-
-#movieStory{
-    text-align:justify;
-}
-
-#charactersDisplay{
+/*#charactersDisplay{
     background-color:$medLightColor;
     display:flex;
     flex-flow:row wrap;
     justify-content:space-around;
     padding-top:15px;
-}
+}*/
 
 #charactersList{
     display:flex;
@@ -375,12 +241,12 @@ h1{
     margin-bottom:10px;
 }
 
-#musicList{
+/*#musicList{
     background-color:$medLightColor;
     display:flex;
     flex-flow:row wrap;
     justify-content:space-around;
-}
+}*/
 
 #videoPlayer{
     position:fixed;
@@ -471,7 +337,7 @@ h1{
         align-items:center;
     }
 
-    h1{
+    .mainTitle{
         width:100%;
         text-align:center;
     }
@@ -520,7 +386,7 @@ h1{
         align-items:center;
     }
     
-    h1{
+    .mainTitle{
         margin:0 40px 0 40px;
     }
     
@@ -557,16 +423,198 @@ h1{
     margin:10px 0 25px;
 }
 
+.whiteBG{
+    background-color: white;
+}
+
+.greyBG{
+    background-color: $medLightColor;
+}
+
+.midGreyBG{
+    background-color: $mediumColor;
+}
+
+.darkGreyBG{
+    background-color: $darkColor;
+}
+
+.yellowBG{
+    background-color: $yellowKids;
+}
+
+.redBG{
+    background-color: $redKids;
+}
+
+.d-flex{
+    display:flex;
+}
+
+.fairSpread{
+    flex-flow:row wrap;
+    justify-content:space-around;
+}
+
+.navMenu{
+    display:flex;
+    flex-flow:row wrap;
+}
+
+.pageLink{
+    color:white;
+    font-weight:700;
+    transition-duration: 300ms;
+    background-color:$mediumColor;
+    border-radius: 4px;
+    padding:13px 20px 13px 50px;
+    position:relative;
+
+    &:hover{
+        transition-duration: 300ms;
+    }
+
+    &::before{
+        display:inline-block;
+        height:5px;
+        margin-right:10px;
+        filter:brightness(200%);
+        position:absolute;
+        top:6px;
+        left:10px
+    }
+}
+
+
+.nav{
+    &Movie{
+        &:hover{
+            background-color:$blueKids;
+        }
+
+        &::before{
+            content:url("../../img/movieIcon.png");
+        }
+    }
+
+    &Music{
+        &:hover{
+            background-color:$redKids;
+        }
+        &::before{
+            content:url("../../img/musicIcon.png");
+        }
+    }
+
+    &Char{
+        &:hover{
+            background-color:$greenKids;
+        }
+        &::before{
+            content:url("../../img/characterIcon.png");
+        }
+    }
+
+    &Game{
+        &:hover{
+            background-color: $yellowKids;
+        }
+        &::before{
+            content:url("../../img/gamesIcon.png");
+        }
+    }
+}
+
 .section{
     width:100%;
     display:flex;
     justify-content: center;
-    background-color: $darkColor;
 }
 
 .section-container{
-    width:80%;
+    width:70%;
     text-align:center;
+}
+
+.pageTitle{
+    padding: 20px 0;
+    font-size:24pt;
+}
+
+.sectionTitle{
+    padding:15px 15px 15px 30px;
+    font-size:22pt;
+    text-align:left;
+    color:white;
+}
+
+.movieHeader{
+    display:flex;
+    flex-flow:row nowrap;
+    justify-content: center;
+    align-items: flex-start;
+
+    &-img{
+        width:15%;
+        min-width:150px;
+        padding:10px;
+        margin:15px 0 15px 0;
+        border: 1px solid rgb(100,100,100);
+    }
+
+    &-info{
+        padding:10px;
+        text-align: left;
+
+        &-details{
+            background-color:$mediumColor;
+            padding:10px 20px 20px 20px;
+            margin-top:10px;
+            border-radius:10px;
+
+            &-title{
+                margin:15px 0 15px 0;
+                color:white;
+            }
+
+            &-text{
+                margin-top:5px;
+                padding-left:10px;
+                color:white;
+
+                &-span{
+                    color:white;
+                    text-decoration: underline;
+                    display:inline-block;
+                    margin-bottom:5px;
+                }
+            }
+
+            &-list{
+                &-item{
+                    margin-top:5px;
+                    padding-left:10px;
+                    color:white;
+
+                    &-link{
+                        color:white;
+
+                        &:hover{
+                            color:$darkColor;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+.longText{
+    text-align:justify;           
+}
+
+.dataSheet{
+    margin-top:20px;
 }
 
 .kidsMoviesBtn{
@@ -576,11 +624,16 @@ h1{
     color:white;
     border-radius: 4px;
     border:none;
+    font-weight:700;
+    cursor:pointer;
+}
 
-    &:hover{
-        cursor:pointer;
-        background-color: $yellowKids;
-    }
+.kidsMoviesBtn.yellowBG:hover{
+    background-color: $yellowKids;
+}
+
+.kidsMoviesBtn.redBG:hover{
+    background-color: $redKids;
 }
 
 #videoPlayerContainer>iframe{
